<resources>
    <string name="app_name">云店POS收银</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="OK">确定</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="rmb_unit">元</string>
    <string name="dialog_title">对话框</string>
    <string name="not_vip_sz">散客</string>
    <string name="cashier_desk_sz">云店POS收银客户端</string>
    <string name="retail_sz">零售单</string>
    <string name="shift_exchange_sz">交 班</string>
    <string name="more_sz">更多</string>
    <string name="other_sz">其他</string>
    <string name="cashier_sz">收银员：</string>
    <string name="store_sz">门店：</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="audit_sz">审核</string>
    <string name="scan_sz">扫码</string>
    <string name="num_not_colon_sz">数量</string>
    <string name="clear_sz">清空</string>
    <string name="discount_sz">折扣</string>
    <string name="change_price_sz">改价</string>
    <string name="tmp_order_sz">挂单</string>
    <string name="vip_button_sz">会员</string>
    <string name="vip_name_sz">会员姓名</string>
    <string name="sale_man_sz">营业员</string>
    <string name="check_out_sz">收款</string>
    <string name="vip_info_sz">会员：</string>
    <string name="order_sz">单号：</string>
    <string name="jh_sz">机号：</string>
    <string name="order_time_sz">时间：</string>
    <string name="num_colon_sz">数量：</string>
    <string name="amt_sz">金额：</string>
    <string name="b_z_sz">条码/助记码/货号</string>
    <string name="b_z_n_sz">条码/名称/助记码/货号</string>
    <string name="del">回退</string>
    <string name="clear">清除</string>
    <string name="shop_id_sz">商户号：</string>
    <string name="appId">appId：</string>
    <string name="appSecret">appSecret：</string>
    <string name="save_sz">保存</string>
    <string name="save_and_new_sz">保存并新增</string>
    <string name="conn_dialog_title_sz">连接参数</string>
    <string name="loading_sz">加载中…</string>
    <string name="sec_sign_sz">s</string>
    <string name="store_name_sz">门店：</string>
    <string name="currency_symbol_sz">￥</string>
    <string name="space_sz">""</string>
    <string name="affirm_pay_sz">确认收银</string>
    <string name="forbid_del_hints">不能删除已付款的支付方式!</string>
    <string name="del_pay_detail_err">删除支付明细错误:%1$s</string>
    <string name="exist_pay_detail_hints">已存在部分付款,不能退出!</string>
    <string name="discount_coupon_hints">使用优惠券前，请先刷会员卡!</string>
    <string name="not_exist_coupon_hint">不存在此优惠券,请确认是否已过期或是否属于当前会员卡</string>
    <string name="coupon_disable_hint">此优惠券已停用</string>
    <string name="coupon_expire_hint">此优惠券已过期</string>
    <string name="coupon_not_use_hint">此优惠券不能在当前门店使用</string>
    <string name="coupon_not_use_offline">此优惠券不能在线下门店使用</string>
    <string name="query_coupon_info">正在查询优惠券信息…</string>
    <string name="verify_coupon_info">正在验证优惠券信息…</string>
    <string name="coupon_dissatisfy_hint">当前满足条件的销售金额[%1$s]不满足优惠券使用金额[%2$s]</string>
    <string name="discount_coupon_only_one">折扣券每单只能使用一张!</string>
    <string name="order_amt_sz">单据金额</string>
    <string name="discount_amt_sz">优惠金额</string>
    <string name="rec_amt_sz">应收金额</string>
    <string name="unpay_amt_sz">待收</string>
    <string name="amt_received_sz">已收</string>
    <string name="balance_sz">剩余</string>
    <string name="all_discount_sz">整单折</string>
    <string name="mo_l_sz">抹零</string>
    <string name="remark_sz">备注</string>
    <string name="pay_m_hint_sz">请选择支付方式</string>
    <string name="equal_sign_sz">=</string>
    <string name="one_sz">1</string>
    <string name="two_sz">2</string>
    <string name="three_sz">3</string>
    <string name="four_sz">4</string>
    <string name="five_sz">5</string>
    <string name="six_sz">6</string>
    <string name="seven_sz">7</string>
    <string name="eight_sz">8</string>
    <string name="nine_sz">9</string>
    <string name="zero_sz">0</string>
    <string name="d_zero_sz">00</string>
    <string name="point_sz">.</string>
    <string name="d_zero_point_sz">.00</string>
    <string name="zero_p_z_sz">0.00</string>
    <string name="pay_detail_row_id_sz">@string/row_id_sz</string>
    <string name="pay_method_name_sz">支付方式</string>
    <string name="pay_detail_amt_sz">@string/amt_not_colon_sz</string>
    <string name="pay_detail_zl_sz">找零</string>
    <string name="pay_detail_v_num_sz">凭证号</string>
    <string name="cash_pay_sz">现金：</string>
    <string name="cash_zl_sz">找零：</string>
    <string name="not_found_hint">Not found content view…</string>
    <string name="name_sz">名称：</string>
    <string name="order_time_colon">订单时间：</string>
    <string name="vip_name_colon">会员姓名：</string>
    <string name="vip_mobile_colon">会员手机：</string>
    <string name="vip_card_no_colon">会员卡号：</string>
    <string name="sale_order_id">销售单号：</string>
    <string name="time_card_order">次卡订单</string>
    <string name="dispose_hints">正在处理…</string>
    <string name="sale_num">购买数量：</string>
    <string name="query_goods_hint">查询商品基本信息错误:%1$s</string>
    <string name="init_cas_hint">初始化收银员信息错误：%1$s</string>
    <string name="searching_bluetooth">正在搜索蓝牙打印机…</string>
    <string name="begin_print">开始打印</string>
    <string name="end_print">结束打印</string>
    <string name="retail_price_sz">零售价</string>
    <string name="save_hint">保存成功!</string>
    <string name="not_permission_hint">当前用户没有权限处理此业务!</string>
    <string name="new_price">新价格</string>
    <string name="abnormal_Network_Status">网络状态异常…</string>
    <string name="search_vip_hint">正在查询会员…</string>
    <string name="goods_practice">做法</string>
    <string name="select_practice">选择做法</string>
    <string name="no_more_data">最后一页</string>
    <string name="cancel_load">取消加载</string>
    <string name="okSelected">确认选择</string>
    <string name="printer_error">读取打印机设置错误:%1$s</string>
    <string name="print_close_hint">打印功能已关闭!</string>
    <string name="print_open_hint">打印功能已开启!</string>
    <string name="save_print_param_error">保存打印状态错误:%1$s</string>
    <string name="print_content_empty">打印内容为空!</string>
    <string name="del_hint">是否删除:%1$s?</string>
    <string name="clear_hint">是否清空?</string>
    <string name="testPrint">测试打印</string>
    <string name="orderIdNotEmptyHint">打印单号不能为空!</string>
    <string name="IllegalOrderSize">非法单据规格!</string>
    <string name="exist_goods_hint">存在已选商品,请先处理!</string>
    <string name="not_found_goods">未找到以下商品:%1$s</string>
    <string name="POS">收银机：</string>
    <string name="general_pos">通用</string>
    <string name="CW_pos">CW1202</string>
    <string name="vip_dialog_title_sz">会员信息</string>
    <string name="vip_search_hint_sz">请输入会员手机号</string>
    <string name="input_birthday_hint_sz">请输入会员生日</string>
    <string name="input_card_id_sz">请输入会员卡号</string>
    <string name="vip_six_sz">性别：</string>
    <string name="vip_ph_num_sz">手机：</string>
    <string name="vip_card_id_sz">卡号：</string>
    <string name="vip_balance_sz">余额：</string>
    <string name="vip_integral_sz">积分：</string>
    <string name="search_sz">搜索</string>
    <string name="modify_sz">修改</string>
    <string name="charge_sz">充值</string>
    <string name="add_sz">新增</string>
    <string name="grade_sz">级别：</string>
    <string name="level_sz">级别：</string>
    <string name="birth_sz">生日：</string>
    <string name="add_vip_sz">新增会员</string>
    <string name="modify_vip_sz">修改会员</string>
    <string name="vip_charge_sz">会员充值</string>
    <string name="c_amt_hint_sz">请输入充值金额</string>
    <string name="vip_info_detail_sz">会员详情</string>
    <string name="ten_sz">10</string>
    <string name="twenty_sz">20</string>
    <string name="fifty_sz">50</string>
    <string name="eighty_sz">100</string>
    <string name="pay_amt_hint_sz">请输入付款金额</string>
    <string name="enter_sz">ENT</string>
    <string name="more_fun_dialog_sz">更多功能</string>
    <string name="sync_sz">同步数据</string>
    <string name="setup_sz">参数设置</string>
    <string name="remark_hint_sz">请输入备注信息</string>
    <string name="not_zero_hint_sz">%1$s不能为零!</string>
    <string name="not_empty_hint_sz">%1$s不能为空!</string>
    <string name="not_exist_hint_sz">不存在%1$s!</string>
    <string name="select_anything_hint">选择%1$s</string>
    <string name="mark_info_hint">标记已获%1$s信息错误:</string>
    <string name="input_hint">请输入%1$s</string>
    <string name="not_zl_hint_sz">不找零</string>
    <string name="select_pay_way_hint_sz">请选择付款方式</string>
    <string name="base_param_sz">基本参数</string>
    <string name="peripheral_sz">外设设置</string>
    <string name="cv_not_hint">顾显参数未设置…</string>
    <string name="not_support_hint">不支持顾显:%1$s</string>
    <string name="init_cv_error">初始化顾显异常…</string>
    <string name="cv_write_error">顾显写数据异常…</string>
    <string name="print_layout_sz">打印格式</string>
    <string name="data_save_sz">数据保存</string>
    <string name="data_save_period_sz">保存周期:</string>
    <string name="a_week_sz">一周</string>
    <string name="a_month_sz">一个月</string>
    <string name="three_month_sz">三个月</string>
    <string name="dualview_sz">双屏设置</string>
    <string name="dualview_show_sz">双屏显示:</string>
    <string name="dualview_img_show_interval_sz">图片轮播间隔：</string>
    <string name="sec_sz">（秒）</string>
    <string name="display_setting_sz">显示设置</string>
    <string name="goods_img_show_switch_sz">显示商品图片:</string>
    <string name="sec_level_category_show">显示二级分类:</string>
    <string name="goods_group_show">显示组合商品:</string>
    <string name="on_sz">开</string>
    <string name="off_sz">关</string>
    <string name="checkout_setting_sz">收银设置</string>
    <string name="goods_cumulative">商品累加</string>
    <string name="auto_ml_sz">自动抹零</string>
    <string name="ml_y_sz">四舍五入到元</string>
    <string name="ml_j_sz">四舍五入到角</string>
    <string name="printer_setting_sz">打印机设置</string>
    <string name="retail_printer_setting">零售打印设置</string>
    <string name="business_printer_setting">后台打印设置</string>
    <string name="bluetooth_p_sz">蓝牙</string>
    <string name="USB_p_sz">USB</string>
    <string name="innerDriver">内置驱动</string>
    <string name="print_way_sz">打印方式:</string>
    <string name="sec_num_sz">@string/num_not_colon_sz</string>
    <string name="sec_sum_sz">@string/sum_sz</string>
    <string name="sec_price_sz">价格</string>
    <string name="time_sz">时间</string>
    <string name="barcode_sz">商品条码</string>
    <string name="g_name_sz">商品名称</string>
    <string name="row_id_sz">序号</string>
    <string name="pay_s_sz">支付状态</string>
    <string name="s_e_status_sz">交班状态</string>
    <string name="upload_s_sz">上传状态</string>
    <string name="order_s_sz">订单状态</string>
    <string name="order_not_colon_sz">单号</string>
    <string name="reality_amt_sz">实收金额</string>
    <string name="cashier_not_colon_sz">收银员</string>
    <string name="item_no_sz">货号</string>
    <string name="unit_sz">单位</string>
    <string name="o_back_sz">退货</string>
    <string name="retail_order_code_sz">零售单号</string>
    <string name="refund_order_sz">退货单号</string>
    <string name="refund_amt_sz">退货金额</string>
    <string name="refund_status_sz">退货状态</string>
    <string name="refund_type_sz">退货方式</string>
    <string name="manage_name_sz">@string/g_name_sz</string>
    <string name="manage_barcode_sz">@string/barcode_sz</string>
    <string name="manage_item_no_sz">@string/item_no_sz</string>
    <string name="manage_zjm_sz">助记码</string>
    <string name="manage_specification_sz">规格</string>
    <string name="manage_pro_place_sz">产地</string>
    <string name="manage_retail_price_sz">@string/retail_price_sz</string>
    <string name="manage_vip_price_sz">会员价</string>
    <string name="manage_category_sz">所属分类</string>
    <string name="manage_goods_attr_sz">商品属性</string>
    <string name="manage_goods_status_sz">商品状态</string>
    <string name="refund_way_sz">退款方式</string>
    <string name="refund_money_sz">退款金额(元)</string>
    <string name="transfer_order_num_sz">单数(笔)</string>
</resources>